# vaccfr-versioncheck

./: VERSIONS.md  pyproject.toml  version_checker.py
.github/workflows/: version-check.yml
